# cisco-pt-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
docs/: PUBLISHING.md  index.html  script.js  style.css
extension/: cisco-pt-mcp.pts
extension/source/: main.js  runcode.js  userfunctions.js  window.js
extension/source/interface/: interface.js
mcp_server/: __init__.py  __main__.py  bridge.py  server.py  tools.py
tests/: test_smoke.py
